# ty

./: .gitignore  Dockerfile  PLAN.md  README.md  docker-compose.yml  main.py  prd.json  pyproject.toml
.github/: copilot-instructions.md
app/: main.py
app/ai/: __init__.py  config.py  exceptions.py  image_client.py  metadata.py  ollama_client.py
app/database/: __init__.py  db.py  models.py
app/services/: __init__.py  affirmation.py  good_things.py  gratitude.py  positive_quote.py  weekly_overview.py
app/validation/: schemas.py
app/views/: add_affirmation.py  add_good_thing.py  add_gratitude.py  add_quote.py  weekly_overview.py
tests/: test_ai.py  test_weekly_overview.py
