
[project]
name = "ty"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-fasthtml>=0.12.41",
]

[project.scripts]
dev = "main:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
