[project]
name = "ty"
version = "0.1.0"
description = "A simple gratitude diary"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "python-fasthtml>=0.12.41",
    "sqlalchemy>=2.0.46",
]

[project.scripts]
dev = "app.main:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pyright]
ignore = [
    "app/services/**",
    "app/database/models.py"
]
reportWildcardImportFromLibrary = false
